ocaml/testsuite/tests/module-type-underscore/syntax_error.compilers.reference
Line 12, characters 19-20:
12 |   module type T := _
                        ^
Error: Syntax error

